added taskTemplate interface, model and routes, updatead Project to contain also creator attribute and the user to contain role attribute - for admin option
